Cleaned up Add Menu Item Input

--- a/views/food/add.erb
+++ b/views/food/add.erb
@@ -8,11 +8,14 @@
     </p>
 
     <p>
-      <input class="span3" type="text" name='description' placeholder="Description">
+      <textarea rows="3"></textarea>
     </p>
 
     <p>
-      <input class="span3" type="text" name='price' placeholder="Price">
+      <div class="input-prepend">
+        <span class="add-on">$</span>
+        <input class="span3" type="text" name='price' placeholder="Price">
+      </div>
     </p>
 
     <p>
