Changed Stripe Version away from v2 to GA version

--- a/views/chargeform.erb
+++ b/views/chargeform.erb
@@ -52,7 +52,7 @@
       </button>-->
       <a href="#" class="clear_cart" data-bind="click: clearCart">Clear Checkout</a>
 
-      <script src="https://checkout.stripe.com/v3/checkout.js" 
+      <script src="https://checkout.stripe.com/checkout.js" 
       class="stripe-button"
       data-key="<%= settings.publishable_key %>" 
       data-description="<%= @venue.name %>"
