Food Dashboard formatting changes

--- a/views/mprinter.erb
+++ b/views/mprinter.erb
@@ -1,11 +1,17 @@
 <div id='content'>
 
-  <h1><a href='/mprinter/authorize'>Authorize Mprinter</a></h1>
+  <h1>Printer Configuration</h1>
+
+  <h3><a href='/mprinter/authorize'>Authorize</a></h3>
   <p><%= session[:mprinter_access_token] %></p>
 
-  <h1><a href='/mprinter/add_device'>Add MPrinter</a></h1>
+  <h3><a href='/mprinter/add_device'>Add</a></h3>
 
-  <h1><a href='/mprinter/confirm_device'>Confirm MPrinter</a></h1>
+  <h3><a href='/mprinter/confirm_device'>Confirm</a></h3>
+
+  <h3><a href='/mprinter/device/status'>Status</a></h3>
+
+  <h3><a href='/mprinter/device/html'>Energize</a></h3>
 
 </div>
 
