--- a/views/chargeform.erb
+++ b/views/chargeform.erb
@@ -2,7 +2,8 @@
 
   <div class="item-container">
     <h2><%= @venue.name %></h2>
-    <p>Tap to add items to checkout</p>
+    <button data-bind='click: save'>Submit order</button>
+
       <div data-bind="foreach: items" /> 
         <div class="add-item" data-bind="click: $parent.addToCart">
            <div class="item-template"> 
@@ -108,6 +109,15 @@
     });
 
     self.items = ko.observableArray(mappedItems);
+
+    self.save = function() {
+        var dataToSave = $.map(self.items(), function (item) {
+            return item.item() ? {
+                item: item.item_name()
+            } : undefined
+        });
+        alert("Could now send this to server: " + JSON.stringify(dataToSave));
+    };
 
     self.subtotal = ko.computed(function(){
         var subtotal = 0;
