Have Stripe now properly creating and appending payment token and charging the user

--- a/views/charge.erb
+++ b/views/charge.erb
@@ -1,5 +1,5 @@
 <div id='content'>
 
-  <h2>Thanks, you paid <strong>$24.00</strong>!</h2>
+  <h2>Thanks, you paid <strong>$<%= @user_amount %></strong>!</h2>
   
 </div>
