Still working on sending json payload

--- a/views/chargeform.erb
+++ b/views/chargeform.erb
@@ -152,7 +152,7 @@
         } : undefined
       });
       var jsonData = ko.toJSON(saveOrder);
-      $.post("http://127.0.0.1:9393/json/order", jsonData, function(returnedData){
+      $.post("http://127.0.0.1:9393/json/order", jsonData, function(data){
       });
     };
 
