--- a/views/chargeform.erb
+++ b/views/chargeform.erb
@@ -25,7 +25,7 @@
   </div>
 
   <div data-bind="visible: total() > 0">
-    <a href="#" data-bind="css: 'scrollup', text: total_quantity"></a>
+    <a href="#" data-bind="css: 'scrolldown', text: total_quantity"></a>
   </div>
 
   <div data-bind="css: { 'navbar navbar-inner checkout' : total() > 0 } ">
@@ -226,16 +226,16 @@
 <script type="text/javascript">
     $(document).ready(function(){ 
         $(window).scroll(function(){
-            if ($(this).scrollTop() > 100) {
-                $('.scrollup').fadeIn();
+            if ($(this).scrollBottom() > 100) {
+                $('.scrolldown').fadeIn();
             } else {
-                $('.scrollup').fadeOut();
+                $('.scrolldown').fadeOut();
             }
         }); 
  
-        $('.scrollup').click(function(){
-            //$("html, body").animate({ scrollTop: 0 }, 600);
-            $("html, body").animate({ scrollTop: $(document).height() }, 1000);
+        $('.scrolldown').click(function(){
+            //$("html, body").animate({ scrollBottom: 0 }, 600);
+            $("html, body").animate({ scrollBottom: $(document).height() }, 1000);
             return false;
         });
     });
@@ -268,7 +268,7 @@
   border-bottom: 5px solid #CCC;
 }
 
-.scrollup, .scrollup:hover{
+.scrolldown, .scrolldown:hover{
     width: 9%;
     height: 40px;
     position: fixed;
