--- a/views/chargeform.erb
+++ b/views/chargeform.erb
@@ -61,9 +61,9 @@
   ko.bindingHandlers.script = {
       init: function(element, valueAccessor, allBindings, viewModel, bindingContext) {
           class_name = 'stripe-button active';
-          data_key = <%= JSON.generate(settings.publishable_key) %>;
+          data_key = '<%= (settings.publishable_key) %>';
           data_name = 'restlessnapkin';
-          data_description = <%= JSON.generate(@venue.name) %>;
+          data_description = '<%= (@venue.name) %>';
           data_amount = viewModel.total() * 100;
           data_image = 'http://restlessnapkin.wpengine.com/wp-content/uploads/2013/06/restless_napkin_posterous.png';
 
@@ -90,9 +90,9 @@
       },
       update: function (element, valueAccessor, allBindingsAccessor, viewModel, bindingContext) {
           class_name = 'stripe-button active';
-          data_key = <%= JSON.generate(settings.publishable_key) %>;
+          data_key = '<%= (settings.publishable_key) %>';
           data_name = 'restlessnapkin';
-          data_description = <%= JSON.generate(@venue.name) %>;
+          data_description = '<%= (@venue.name) %>';
           data_amount = viewModel.total() * 100;
           data_image = 'http://restlessnapkin.wpengine.com/wp-content/uploads/2013/06/restless_napkin_posterous.png';
 
