--- a/views/chargeform.erb
+++ b/views/chargeform.erb
@@ -42,8 +42,9 @@
       </div>
     </div>
     <form action="/charge" method="post" class="payment" data-bind="visible: total() > 0">
-      <input class="span2" name="amount" type="hidden" data-bind="value: total()" />
+      <input name="venue" type="hidden" value="<%= @venue.name %>" />
       <input name="order" type="hidden" data-bind="value: order()" />
+      <input name="amount" type="hidden" data-bind="value: total()" />
 
       <article>
         <h4 style="text-align:center" data-bind="visible: total() > 0">
@@ -231,19 +232,16 @@
 <script type="text/javascript">
 // This javascript is hacked for the checkout pill to scroll down instead of up
     $(document).ready(function(){ 
-        $(window).scroll(function(){
-            if ($(this).scrollTop() < $(document).height() - 700) {
-                $('.scrolldown').fadeIn();
-            } else {
-                $('.scrolldown').fadeOut();
-            }
-        }); 
+      if ($(this).scrollTop() < $(document).height() - 700) {
+        $('.scrolldown').fadeIn();
+      } else {
+        $('.scrolldown').fadeOut();
+      }
  
-        $('.scrolldown').click(function(){
-            //$("html, body").animate({ scrollTop: 0 }, 600);
-            $("html, body").animate({ scrollTop: $(document).height()-$(window).height() }, 1000);
-            return false;
-        });
+      $('.scrolldown').click(function(){
+        $("html, body").animate({ scrollTop: $(document).height()-$(window).height() }, 500);
+          return false;
+      });
     });
 </script>
 
