--- a/views/printer/order.erb
+++ b/views/printer/order.erb
@@ -1,8 +1,9 @@
-<h1>New Order @ <%= Time.new.strftime("%m/%d/%Y %I:%M:%S %P") %></h1>
+<h2><%= @venue %> Order</h2>
+<h2><%= Time.new.strftime("%m-%d %I:%M%P") %></h2>
 <h3 style="word-wrap: break-all;"><%= @customer_email %> (<%= @token[:card][:type] %> <%= @token[:card][:last4] %>)</h3>
 
 <ul style="font-size: 150%;">
   <% @order.each do |item| %>
-    <li><%= item["quantity"] %> &times; <%= item["item"] %></li>
+    <li><h2><%= item["quantity"] %> &times; <%= item["item"] %></h2></li>
   <% end %>
 </ul>
