Added bottom border to checkout pill to help clickability

--- a/views/chargeform.erb
+++ b/views/chargeform.erb
@@ -271,7 +271,7 @@
   width: 95%;
   background-color: white;
   border-radius: 10px;
-  border-bottom: 5px solid #c0c0c0 ;
+  border-bottom: 5px solid #c0c0c0;
   padding: 1px 5px 5px 15px;
   margin: 1px 0 10px 0;
 }
@@ -286,8 +286,9 @@
     color: #FFF !important;
     background-color: #1B2125;
     border-radius: 21px;
+    border-bottom: 3px solid #939393;
     text-decoration: none;
     text-indent: 7px;
-    line-height: 38px;
+    line-height: 40px;
 }
 </style>
