Placed /food under /venue for better organization and updated associated routes

--- a/views/admin/dashboard.erb
+++ b/views/admin/dashboard.erb
@@ -1,5 +1,9 @@
 <h1>Admin Dashboard</h1>
 
-  <h3><a href='/admin/liquor/dashboard'>Liquor</a></h3>
+  <h3><a href='/admin/venue/dashboard'>Venues</a></h3>
+  <p>Manage Venue information<p>
 
-  <h3><a href='/admin/venue/dashboard'>Venue</a></h3>
+  <hr>
+
+  <h3><a href='/admin/liquor/dashboard'>Liquors</a></h3>
+  <p>Manage the liquors available to Venues</p>
