--- a/views/charge.erb
+++ b/views/charge.erb
@@ -7,12 +7,12 @@
 
 <div class="row-fluid" style="background: #baddd9; color: #555555">
   <div style="padding:10px;" class="span12">
-    <h4>$<%= @user_amount %> on <%= @token[:card][:type] %> <%= @token[:card][:last4] %></h4>
+    <h4>$<%= @customer_amount %> on <%= @token[:card][:type] %> <%= @token[:card][:last4] %></h4>
     <h4><%= Time.new.strftime("%m-%d %I:%M%P") %></h4>
     <h5><%= @customer_email %></h5>
 
     <ul style="font-size: 150%; list-style-type: none;">
-      <% @order.each do |item| %>
+      <% @customer_order.each do |item| %>
         <li><h4><%= item["quantity"] %> &times; <%= item["item"] %></h4></li>
       <% end %>
     </ul>
