--- a/views/printer/order.erb
+++ b/views/printer/order.erb
@@ -3,7 +3,7 @@
 <h3 style="word-wrap: break-all;"><%= @customer_email %> (<%= @token[:card][:type] %> <%= @token[:card][:last4] %>)</h3>
 
 <ul style="font-size: 150%;">
-  <% @order.each do |item| %>
+  <% @customer_order.each do |item| %>
     <li><h2><%= item["quantity"] %> &times; <%= item["item"] %></h2></li>
   <% end %>
 </ul>
